--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
         </section>
         <section>
             <h2>Aqui deve conter uma seção de Contato</h2>
-            <p>xxxxxxxxxx</p>
+            <p>Whatsapp: 11 99999-9999</p>
             <p>xxxxxxxxxx</p>
             <p>xxxxxxxxxxx</p>
         </section>
