--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
             <img src="./imagens/nosso-time.jpg" alt="Nossa Equipe">
         </section>
         <section>
-            <h2>Aqui deve conter uma seção de Contato</h2>
+            <h2>Entre em Contato</h2>
             <p>Whatsapp: 11 99999-9999</p>
             <p>Email: contato@socialconnect.com.br</p>
             <p>Horário de atendimento: 09:00h às 18:00h</p>
